style: Fixed flicker speed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ input[type="radio"]{
     pointer-events: none;
   }
   .crt {
-    animation: textShadow 1.6s infinite;
+    animation: textShadow 5s infinite;
   }
   
   .site-title {
